[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arx"
version = "1.0.0"
description = "A secure wrapper around yay package manager"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "openai>=1.0.0",
  "requests>=2.25.0",
]
authors = [{ name = "Arx Developer" }]
license = { text = "MIT" }
urls = { Homepage = "https://github.com/yourusername/arx" }

[project.scripts]
arx = "arx.cli:main"
