[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "arx"
version = "1.0.6"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "openai>=1.0.0",
  "requests>=2.25.0",
]
urls = { Homepage = "https://github.com/PhilCauss/arx" }

[project.scripts]
arx = "arx.cli:main"
arx-config = "arx.config_cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
